Consumindo o endpoint Register com sucesso

--- a/Frontend/wwwroot/Register.html
+++ b/Frontend/wwwroot/Register.html
@@ -5,7 +5,17 @@
     <title>Title</title>
 </head>
 <body>
+<div id="app">
+    <label for="register-name">Nome</label><br>
+    <input id="register-name" type="text" placeholder="digite o nome de usuario"><br>
+    
+    <label for="register-email">Email</label><br>
+    <input id="register-email" type="email" placeholder="digite o email"><br>
 
+    <label for="register-password">Senha</label><br>
+    <input id="register-password" type="password" placeholder="digite sua senha"><br>
+    <button onclick="register()">Confirmar</button>
+</div>
 </body>
 <script src="js/register.js"></script>
 </html>
