Finalizando os styles de register e login

--- a/Frontend/wwwroot/Login.html
+++ b/Frontend/wwwroot/Login.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agenda de Estudos</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-<div id="app">
+<div class="login-box">
+    <h2>Login</h2>
     <label for="login-email">Email</label><br>
     <input id="login-email" type="email" placeholder="digite o email"><br>
-    
+
     <label for="login-password">Senha</label><br>
     <input id="login-password" type="password" placeholder="digite sua senha"><br>
     <button onclick="login()">Confirmar</button>
