--- a/Frontend/wwwroot/Register.html
+++ b/Frontend/wwwroot/Register.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Register</title>
+    <link rel="stylesheet" href="css/register.css">
 </head>
 <body>
-<div id="app">
+<div class="register-box">
+    <h2>Register</h2>
     <label for="register-name">Nome</label><br>
     <input id="register-name" type="text" placeholder="digite o nome de usuario"><br>
     
