Fazendo alteracoes no css login e register

--- a/Frontend/wwwroot/Register.html
+++ b/Frontend/wwwroot/Register.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="register-box">
-    <h2>Register</h2>
+    <h2>Cadastro</h2>
     <label for="register-name">Nome</label><br>
     <input id="register-name" type="text" placeholder="digite o nome de usuario"><br>
     
