Adicionando materias com sucesso e ja retornando elas na minha lista

--- a/Frontend/wwwroot/Dashboard.html
+++ b/Frontend/wwwroot/Dashboard.html
@@ -87,6 +87,12 @@
                 <option value="1">Média</option>
                 <option value="2">Baixa</option>
             </select>
+            
+            <label for="materia-select">Matéria</label>
+            <select id="materia-select">
+                <option value="">Selecione</option>
+                
+            </select>
 
             <label for="tarefa-data-inicio">Data Inicio</label><br>
             <input type="date" id="tarefa-data-inicio" placeholder="Digite o nome" required />
