--- a/Frontend/wwwroot/Dashboard.html
+++ b/Frontend/wwwroot/Dashboard.html
@@ -12,6 +12,10 @@
     <div class="sidebar-header">
         <h1 class="logo">Agenda</h1>
     </div>
+    
+    <div class="user-area" id="user-area">
+        
+    </div>
 
     <nav class="sidebar-menu">
         <a href="#" class="menu-item active" id="menu-dashboard">
