Criando e implementando javascript e css na pagina destinada a Materias

--- a/Frontend/wwwroot/Dashboard.html
+++ b/Frontend/wwwroot/Dashboard.html
@@ -19,10 +19,16 @@
 
     <nav class="sidebar-menu">
         <a href="#" class="menu-item active" id="menu-dashboard">
-            <span>Dashboard</span>
+            <span>Home</span>
         </a>
         <a href="#" class="menu-item" id="menu-perfil">
             <span>Perfil</span>
+        </a>
+        <a href="Materia.html" class="menu-item" id="menu-materia">
+            <span>Materia</span>
+        </a>
+        <a href="#" class="menu-item" id="menu-tarefa">
+            <span>Tarefa</span>
         </a>
     </nav>
 
