Criando uma pagina destinada para as tarefas e implementando css e javascript

--- a/Frontend/wwwroot/Materia.html
+++ b/Frontend/wwwroot/Materia.html
@@ -25,7 +25,7 @@
         <a href="Materia.html" class="menu-item" id="menu-materia">
             <span>Materia</span>
         </a>
-        <a href="#" class="menu-item" id="menu-tarefa">
+        <a href="Tarefa.html" class="menu-item" id="menu-tarefa">
             <span>Tarefa</span>
         </a>
     </nav>
