Adicionando um script onde aparece em qual area o usuario esta

--- a/Frontend/wwwroot/Materia.html
+++ b/Frontend/wwwroot/Materia.html
@@ -16,18 +16,10 @@
     </div>
 
     <nav class="sidebar-menu">
-        <a href="Dashboard.html" class="menu-item active" id="menu-dashboard">
-            <span>Home</span>
-        </a>
-        <a href="#" class="menu-item" id="menu-perfil">
-            <span>Perfil</span>
-        </a>
-        <a href="Materia.html" class="menu-item" id="menu-materia">
-            <span>Materia</span>
-        </a>
-        <a href="Tarefa.html" class="menu-item" id="menu-tarefa">
-            <span>Tarefa</span>
-        </a>
+        <a href="Dashboard.html" class="menu-item" id="menu-dashboard">Home</a>
+        <a href="#" class="menu-item" id="menu-perfil">Perfil</a>
+        <a href="Materia.html" class="menu-item" id="menu-materia">Materia</a>
+        <a href="Tarefa.html" class="menu-item" id="menu-tarefa">Tarefa</a>
     </nav>
 
     <div class="sidebar-footer">
