Consumindo o endpoints de deletar tarefas e materias e implementando na area de ambas

--- a/Frontend/wwwroot/Tarefa.html
+++ b/Frontend/wwwroot/Tarefa.html
@@ -36,7 +36,7 @@
         </div>
 
         <div id="tarefas-container" class="tarefas-grid">
-            <div class="loading">Carregando tarefas...</div>
+            <div>Carregando tarefas...</div>
         </div>
     </section>
     
