implementando verificacoes de login e verificacoes gerais em todas as paginas

--- a/Frontend/wwwroot/Dashboard.html
+++ b/Frontend/wwwroot/Dashboard.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Agenda de Estudos</title>
     <link rel="stylesheet" href="css/dashboard.css">
+    <script src="js/auth.js"></script>
+    <script>
+        verificarAuth();
+    </script>
 </head>
 <body>
 
@@ -46,7 +50,6 @@
         </section>
     
 </main>
-
 <script src="js/dashboard.js"></script>
 </body>
 </html>
