--- a/Frontend/wwwroot/Materia.html
+++ b/Frontend/wwwroot/Materia.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Materia</title>
     <link rel="stylesheet" href="css/materia.css">
+    <script src="js/auth.js"></script>
+    <script>
+        verificarAuth();
+    </script>
 </head>
 <body>
 <aside class="sidebar">
