--- a/Frontend/wwwroot/Register.html
+++ b/Frontend/wwwroot/Register.html
@@ -5,6 +5,10 @@
     <title>Register</title>
     <link rel="stylesheet" href="css/register.css">
 </head>
+<script src="js/auth.js"></script>
+<script>
+    jaEstaLogado();
+</script>
 <body>
 <div id="register-error" class="error-box">
     Erro ao registrar
