--- a/Frontend/wwwroot/Tarefa.html
+++ b/Frontend/wwwroot/Tarefa.html
@@ -5,6 +5,10 @@
     <title>Tarefa</title>
     <link rel="stylesheet" href="css/tarefa.css">
 </head>
+<script src="js/auth.js"></script>
+<script>
+    verificarAuth();
+</script>
 <body>
 <aside class="sidebar">
     <div class="sidebar-header">
