--- a/Frontend/wwwroot/Login.html
+++ b/Frontend/wwwroot/Login.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="css/login.css">
+    <script src="js/auth.js"></script>
+    <script>
+        jaEstaLogado();
+    </script>
 </head>
 <body>
 <div id="login-error" class="error-box">
