mudando o estilo das paginas

--- a/Frontend/wwwroot/Dashboard.html
+++ b/Frontend/wwwroot/Dashboard.html
@@ -36,7 +36,7 @@
         <section class="streak">
             <h2>Sequência</h2>
     
-            <div class="sequencia">
+            <div class="sequencia" id="sequencia">
                 <h2>12</h2>
                 <p>Dias consecutivos</p>
             </div>
