--- a/Frontend/wwwroot/Tarefa.html
+++ b/Frontend/wwwroot/Tarefa.html
@@ -43,7 +43,7 @@
     <div id="modal-tarefa" class="modal" style="display:none;">
         <div class="modal-content">
             <span id="close-tarefa" class="close">&times;</span>
-            <h2>Nova Tarefa</h2>
+            <h2 id="modal-titulo">Nova Tarefa</h2>
             <br>
             <label for="nome-tarefa">Nome</label><br>
             <input type="text" id="nome-tarefa" placeholder="Digite o nome" required />
