adicionando o editar na pagina de materias tambem, funcionando 100%

--- a/Frontend/wwwroot/Materia.html
+++ b/Frontend/wwwroot/Materia.html
@@ -41,7 +41,7 @@
     <div id="modal-materia" class="modal" style="display:none;">
         <div class="modal-content">
             <span id="close-materia" class="close">&times;</span>
-            <h2>Nova Matéria</h2>
+            <h2 id="modal-titulo">Nova Matéria</h2>
             <br>
             <label for="nome-materia">Nome da Matéria:</label><br>
             <input type="text" id="nome-materia" placeholder="Digite o nome" required /><br>
