criando o html de perfil e criando um arquivo javascript separado para colocar o active da minha sidebar pois estava a mesma funcao em varias classes

--- a/Frontend/wwwroot/Tarefa.html
+++ b/Frontend/wwwroot/Tarefa.html
@@ -9,6 +9,7 @@
 <script>
     verificarAuth();
 </script>
+<script src="js/active.js"></script>
 <body>
 <aside class="sidebar">
     <div class="sidebar-header">
@@ -17,7 +18,7 @@
 
     <nav class="sidebar-menu">
         <a href="Dashboard.html" class="menu-item" id="menu-dashboard">Home</a>
-        <a href="#" class="menu-item" id="menu-perfil">Perfil</a>
+        <a href="Perfil.html" class="menu-item" id="menu-perfil">Perfil</a>
         <a href="Materia.html" class="menu-item" id="menu-materia">Materia </a>
         <a href="Tarefa.html" class="menu-item" id="menu-tarefa">Tarefa</a>
     </nav>
