--- a/Frontend/wwwroot/Materia.html
+++ b/Frontend/wwwroot/Materia.html
@@ -8,6 +8,7 @@
     <script>
         verificarAuth();
     </script>
+    <script src="js/active.js"></script>
 </head>
 <body>
 <aside class="sidebar">
@@ -17,7 +18,7 @@
 
     <nav class="sidebar-menu">
         <a href="Dashboard.html" class="menu-item" id="menu-dashboard">Home</a>
-        <a href="#" class="menu-item" id="menu-perfil">Perfil</a>
+        <a href="Perfil.html" class="menu-item" id="menu-perfil">Perfil</a>
         <a href="Materia.html" class="menu-item" id="menu-materia">Materia</a>
         <a href="Tarefa.html" class="menu-item" id="menu-tarefa">Tarefa</a>
     </nav>
